# fastapi-boilerplate

./: .env_sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev.yml  pyproject.toml
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: authentication.py  data.py  user.py
app/core/: config.py  errors.py  jwt.py  utils.py
app/crud/: shortcuts.py  user.py
app/db/: mongodb_utils.py
app/models/: data.py  dbmodel.py  rwmodel.py  user.py
